# parallel-programming-seminar

./: .gitignore  LICENSE  README.md  gpu2080node1_parallel.out  gpu2080node1_sequential.out
include/: parallel.cuh
package/: CMakeLists.txt  jobfile.sh  main.cu
package/include/: sequential.h
package/src/: parallel.cu
parallel/: CMakeLists.txt  jobfile.sh  jobfile_1.sh  main.cu
parallel/include/: parallel.cuh
parallel/src/: parallel.cu
reduce_optimized/: CMakeLists.txt  jobfile.sh  reduce_optimized.cu
runtime_analysis/: parallel_mean.csv  reduce_optimized_mean.csv  requirements.txt  runtime_analysis.ipynb  sequential_mean.csv  speedup.csv  speedup_kernel.csv  speedup_opt.csv
runtime_analysis/2023-05-25T00-41-19-gpu2080-sequential/: ppseminar_sequential_13.csv  ppseminar_sequential_15.csv  ppseminar_sequential_19.csv  ppseminar_sequential_22.csv  ppseminar_sequential_24.csv  ppseminar_sequential_25.csv  ppseminar_sequential_30.csv  ppseminar_sequential_34.csv  ppseminar_sequential_37.csv  ppseminar_sequential_40.csv  ppseminar_sequential_48.csv  ppseminar_sequential_49.csv  ppseminar_sequential_5.csv  ppseminar_sequential_9.csv
runtime_analysis/2023-05-25T00-41-19-normal-sequential/: ppseminar_sequential_1.csv  ppseminar_sequential_10.out  ppseminar_sequential_11.out  ppseminar_sequential_12.csv  ppseminar_sequential_14.csv  ppseminar_sequential_16.out  ppseminar_sequential_17.csv  ppseminar_sequential_18.csv  ppseminar_sequential_2.csv  ppseminar_sequential_20.csv  (+26 more)
sequential/: CMakeLists.txt  jobfile.sh  main.cpp
sequential/src/: sequential.cpp
(+100 files in other folders)
